[gd_scene load_steps=14 format=3 uid="uid://c1xavxbtmtkaq"]

[ext_resource type="Script" path="res://Player.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://cp0gqnnuhtkwo" path="res://Sprites/KnobBlue.png" id="2_iy2b0"]
[ext_resource type="Texture2D" uid="uid://bh78xg58ao1os" path="res://Sprites/KnobLavender.png" id="4"]
[ext_resource type="Texture2D" uid="uid://bjdjbqofwvp1y" path="res://Sprites/ShadowPlayer.png" id="5_e2wyt"]
[ext_resource type="Texture2D" uid="uid://dkfx0dj8qfx17" path="res://Sprites/KnobTan.png" id="6"]
[ext_resource type="Texture2D" uid="uid://bnq81hrtk435f" path="res://Sprites/KnobCrack.png" id="6_1v5kq"]
[ext_resource type="AudioStream" uid="uid://hu1ibellfa2j" path="res://addons/kenney sci-fi sounds/laser_small_004.ogg" id="6_d60go"]
[ext_resource type="AudioStream" uid="uid://c5x6fs3c1hqdi" path="res://addons/kenney_interface_sounds/click_002.wav" id="7_2criu"]
[ext_resource type="AudioStream" uid="uid://bt3k1cuuwr26u" path="res://addons/kenney impact sounds/impact_wood_heavy_000.ogg" id="7_m8giy"]
[ext_resource type="AudioStream" uid="uid://dqx27jbbqbyau" path="res://addons/kenney impact sounds/impact_metal_heavy_002.ogg" id="8_wa2fh"]
[ext_resource type="AudioStream" uid="uid://b0auhw381bnu1" path="res://addons/kenney impact sounds/impact_punch_medium_000.ogg" id="9_svhun"]

[sub_resource type="SpriteFrames" id="1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_iy2b0")
}],
"loop": true,
"name": &"Dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6")
}],
"loop": true,
"name": &"Start",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"new_animation",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="2"]
radius = 7.07107

[node name="Player" type="CharacterBody2D"]
z_index = 1
script = ExtResource("1")

[node name="PlayerSprite" type="AnimatedSprite2D" parent="."]
z_index = 3
sprite_frames = SubResource("1")
animation = &"Dead"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("2")

[node name="Web" type="Line2D" parent="."]
width = 1.0
default_color = Color(0.815686, 0.815686, 0.815686, 1)

[node name="PlayerShadow" type="Sprite2D" parent="."]
z_index = -1
z_as_relative = false
position = Vector2(2, 2)
texture = ExtResource("5_e2wyt")

[node name="Crack" type="Sprite2D" parent="."]
visible = false
z_index = 4
z_as_relative = false
texture = ExtResource("6_1v5kq")

[node name="WebShadow" type="Line2D" parent="."]
width = 1.0
default_color = Color(0, 0, 0, 0.501961)

[node name="WebSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_d60go")

[node name="ImpactCeilingSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_m8giy")

[node name="ImpactSpikeSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_wa2fh")

[node name="DeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_svhun")

[node name="ButtonClicked" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2criu")

[node name="ButtonReleased" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_2criu")
pitch_scale = 1.5

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
